--- a/BadSecApp/Client/Pages/Counter.razor
+++ b/BadSecApp/Client/Pages/Counter.razor
@@ -1,4 +1,6 @@
 ﻿@page "/counter"
+@inject HttpClient HttpClient
+@inject Microsoft.Extensions.Configuration.IConfiguration configuration
 
 <h1>Counter</h1>
 
@@ -9,8 +11,15 @@
 @code {
     private int currentCount = 0;
 
-    private void IncrementCount()
+    private async Task IncrementCount()
     {
         currentCount++;
+
+        // A05:2021 – Security Misconfiguration
+        // Plusieurs informations sensibles sont stockées dans le fichier de configuration qui est retourné au client (il peut etre lu dans la partie réseau du navigateur)
+        // Une configuration contient un chemin d'accès complet => Full Path Disclosure
+        // Ce chemin est ensuite envoyé au serveur pour manipulation
+        string path = configuration["RootPath"];
+        var reponse = await HttpClient.GetAsync($"api/Counter?valeur={currentCount}&path={path}");
     }
 }
